<resources>
    <string name="app_name">BlockPro</string>
    <string name="button_auto_install">AUTO INSTALL</string>
    <string name="button_install_files">INSTALL FILES</string>
    <string name="card_title_blocks">Blocks files</string>
    <string name="card_descrip_select_fileblocks">Select files (blocks.json) and (palettes.json)</string>
    <string name="card_hint_edittex_path_palettes">path:/.../palettes.json</string>
    <string name="card_hint_edittext_path_blocks">path:/.../blocks.json</string>
    <string name="card_title_install_from_zip_off">Intall from zip</string>
    <string name="card_title_install_from_zip_on">Manual installer</string>
    <string name="str_install_manual">Install manual files</string>
    <string name="card_title_zip">Zip file</string>
    <string name="card_descrip_select_zipfile">Select (.zip) file</string>
    <string name="card_hint_edittext_path_zip">path:/.../*filename.zip</string>
    <string name="card_title_compandevent">Select component files</string>
    <string name="card_descrip_select_compandevent">Select (component.json) and (events.json) files</string>
    <string name="card_hint_edittext_path_component">path:/.../component.json</string>
    <string name="card_hint_edittext_path_events">path:/.../events.json</string>
    <string name="str_btn_acept">ACCEPT</string>
    <string name="allow_your_storage">Allow your storage</string>
    <string name="desc_allow_your_storage">We will need your storage to\ngive better experience</string>
    <string name="card_search">Search...</string>
    <string name="button_add_palette">ADD PALETTE</string>
    <string name="str_invalid_name">Invalid name palette</string>
    <string name="dialog_btn_cancel">CANCEL</string>
    <string name="dialog_btn_save">SAVE</string>
    <string name="dialog_btn_delete">DELETE</string>
    <string name="dialog_title_addpalette">Add palette</string>
    <string name="dialog_title_editpalette">Edit palette</string>
    <string name="dialog_edthint_name">Name</string>
    <string name="dialog_edthint_color">Color</string>
    <string name="activity_name_settings">Settings</string>
    <string name="str_builtin_blocks">Built-in blocks</string>
    <string name="str_builtin_blocks_desc">May slow down loading blocks in Logic Editor</string>
    <string name="str_backup_filename_format_desc">Defauilt is \'$projectName v$versionName ($pkgName, $versionCode) $time(yyy-MM-dd\'T\'HHmmss)\'</string>
    <string name="str_backup_filename_format">Bcakup filename format</string>
    <string name="str_backup_direrctory">Backup directory</string>
    <string name="str_backup_directory_desc">The default directory is:/internal storage/.sketchware/backups/</string>
    <string name="str_show_all_variable_blocks_desc">"All variable blocks will be visible, even if you don't have variables for them "</string>
    <string name="str_show_all_variable_blocks">Show all variable blocks</string>
    <string name="str_show_all_blocks_of_palette_desc">Every single avalible block will be shown.\nWill slow down opening palettes!</string>
    <string name="str_show_all_blocks_of_palettes">Show all blocks of palettes</string>
    <string name="str_launch_projects_after_installing">"Launch projects after installing "</string>
    <string name="str_launch_projects_after_installing_desc">Opens projects automatically after auto-installation using root.</string>
    <string name="str_install_projects_with_root_acces">Install projects with root acces</string>
    <string name="str_install_projects_with_root_acces_desc">Automatically installs project APKs after building using root acces.</string>
    <string name="str_use_new_version_control">Use new Version Control</string>
    <string name="str_use_new_version_control_desc">Enable custom version code and name for projects.</string>
    <string name="str_use_legacy_code_editor">Use legacy Code Editor</string>
    <string name="str_use_legacy_code_editor_desc">Enable old Code Editor from v6.2.0.</string>
    <string name="str_enable_block_text_input_highlighting">Enable block text input highlighting</string>
    <string name="str_enable_block_text_input_highlighting_desc">Enable syntax highlighting while editing blocks text parameters.</string>
    <string name="button_add_block">ADD BLOCK</string>
</resources>