<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:id="@+id/lin_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lin_head"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_title_addpalette"
                    android:textColor="#424242"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/div_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="#e5e5e5" />

            <LinearLayout
                android:id="@+id/lin_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/lin_edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/rename_96_blue" />

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/item_card_strok_design"
                        android:ems="10"
                        android:hint="@string/dialog_edthint_name"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textSize="12sp"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_edt_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/color_palette_48" />

                    <EditText
                        android:id="@+id/edt_color"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/item_card_strok_design"
                        android:ems="10"
                        android:hint="@string/dialog_edthint_color"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textSize="12sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/outline_arrow_drop_down_24_grey" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_options"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/dialog_btn_delete"
                    android:textColor="@color/white" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/dialog_btn_cancel"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/dialog_btn_save"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>