<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InstallerActivity">

    <LinearLayout
        android:id="@+id/lin_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/vscrollview1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_options_installer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <Switch
                            android:id="@+id/switch1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_title_install_from_zip_off"
                            android:textSize="12sp"
                            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_options_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="4dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:id="@+id/linear5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/textview4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/card_title_zip"
                            android:textColor="@color/colorNormalText" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <LinearLayout
                            android:id="@+id/linear6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                            <TextView
                                android:id="@+id/textview5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/card_descrip_select_zipfile"
                                android:textColor="#BABABA"
                                android:textSize="12sp"
                                tools:ignore="TextContrastCheck" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/item_card_strok_design"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/edt_zip_path"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:hint="@string/card_hint_edittext_path_zip"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textSize="12sp"
                                tools:ignore="TouchTargetSizeCheck" />

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:importantForAccessibility="no"
                                app:srcCompat="@drawable/outline_attach_file_24_grey" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_options_blocks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="4dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:id="@+id/linear3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_title_blocks"
                            android:textColor="@color/colorTitle_Card"
                            android:textSize="16sp" />

                        <View
                            android:id="@+id/divider2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <LinearLayout
                            android:id="@+id/linear4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_descrip_select_fileblocks"
                                android:textColor="#BABABA"
                                tools:ignore="TextContrastCheck" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:background="@drawable/item_card_strok_design"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/edittext1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/card_hint_edittex_path_palettes"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColorHint="#757575"
                                android:textIsSelectable="false"
                                android:textSize="12sp"
                                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:importantForAccessibility="no"
                                app:srcCompat="@drawable/outline_attach_file_24_grey" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/item_card_strok_design"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/edittext2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/card_hint_edittext_path_blocks"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColorHint="#757575"
                                android:textIsSelectable="false"
                                android:textSize="12sp"
                                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"

                                android:importantForAccessibility="no"
                                app:srcCompat="@drawable/outline_attach_file_24_grey" />

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_options_component"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="4dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:id="@+id/linear8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_title_compandevent"
                            android:textColor="@color/colorTitle_Card"
                            android:textSize="16sp" />

                        <View
                            android:id="@+id/divider3"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <LinearLayout
                            android:id="@+id/linear9"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_title_compandevent"
                                android:textColor="#BABABA"
                                tools:ignore="TextContrastCheck" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:background="@drawable/item_card_strok_design"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/edittext3"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/card_hint_edittext_path_component"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColorHint="#757575"
                                android:textIsSelectable="false"
                                android:textSize="12sp"
                                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:importantForAccessibility="no"
                                app:srcCompat="@drawable/outline_attach_file_24_grey" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/item_card_strok_design"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/edittext4"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:hint="@string/card_hint_edittext_path_events"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColorHint="#757575"
                                android:textIsSelectable="false"
                                android:textSize="12sp"
                                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"

                                android:importantForAccessibility="no"
                                app:srcCompat="@drawable/outline_attach_file_24_grey" />

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:text="@string/button_auto_install"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:text="@string/button_install_files"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>